# RVizSplat

./: README.md
docs/: transport_performance.md
gsplat_msgs/: CMakeLists.txt
gsplat_msgs/msg/: SplatBlobChunk.msg  SplatSnapshotRef.msg  SplatStreamInfo.msg  SplatTileChunk.msg
gsplat_publisher/: package.xml  setup.py
gsplat_publisher/bench/: bench_encoding.py
gsplat_publisher/gsplat_publisher/: blob_snapshot_publisher.py  chunking.py  compact_encoder.py  tile_demo_publisher.py
gsplat_publisher/test/: conftest.py  test_chunking.py  test_compact_encoder.py  test_crc64.py  test_ply_integration.py  test_publish_throughput.py
gsplat_rviz_plugin/: CMakeLists.txt  package.xml
gsplat_rviz_plugin/include/gsplat_rviz_plugin/displays/: gsplat_display.hpp
gsplat_rviz_plugin/include/gsplat_rviz_plugin/splat_loaders/: blob_assembler.hpp  blob_topic_source.hpp  compact_decoder.hpp  ply_loader.hpp  snapshot_payload_loader.hpp  snapshot_ref_source.hpp  tile_cache.hpp  tile_stream_source.hpp
gsplat_rviz_plugin/src/gsplat_rviz_plugin/displays/: gsplat_display.cpp
gsplat_rviz_plugin/src/gsplat_rviz_plugin/splat_loaders/: blob_assembler.cpp  blob_topic_source.cpp  compact_decoder.cpp  ply_loader.cpp  snapshot_payload_loader.cpp  snapshot_ref_source.cpp  tile_cache.cpp  tile_stream_source.cpp
