<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format2.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>gsplat_rviz_plugin</name>
  <version>1.0.0</version>
  <description>
    Custom rviz2 display plugins for Gaussian Splatting visualization.
  </description>

  <maintainer email="mathur.aditya98@gmail.com">Aditya Mathur</maintainer>
  <maintainer email="akashchikhalikar@gmail.com">Akash Chikhalikar</maintainer>
  <maintainer email="rssuchetan@gmail.com">Suchetan Saravanan</maintainer>
  <maintainer email="videhpatel25@gmail.com">Videh Patel</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <build_depend>qt6-base-dev</build_depend>
  <build_depend>rviz_ogre_vendor</build_depend>
  <build_depend>libboost-dev</build_depend>
  <build_depend>libglew-dev</build_depend>

  <build_export_depend>rviz_ogre_vendor</build_export_depend>

  <exec_depend>libqt6-core</exec_depend>
  <exec_depend>libqt6gui6t64</exec_depend>
  <exec_depend>libqt6opengl6t64</exec_depend>
  <exec_depend>libqt6widgets6t64</exec_depend>
  <exec_depend>rviz_ogre_vendor</exec_depend>

  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rviz_common</depend>
  <depend>rviz_rendering</depend>
  <depend>gsplat_msgs</depend>
  <depend>geometry_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
